--- a/KingPro/KingPro/KingPro/MainWindow.xaml
+++ b/KingPro/KingPro/KingPro/MainWindow.xaml
@@ -1,12 +1,100 @@
-﻿<Window x:Class="KingPro.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KingPro"
+        xmlns:View="clr-namespace:FolderBrowser.View;assembly=FolderBrowser"
+        xmlns:View1="clr-namespace:DataGridOperation.View;assembly=DataGridOperation"
+        xmlns:DataTimePicker="clr-namespace:DataTimePicker;assembly=DataTimePicker"
+        x:Class="KingPro.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="KingPro(Demo)"
+        Height="450"
+        Width="800">
+    <Grid Name="MainGrid">
+        <DockPanel>
+            <Menu DockPanel.Dock="Top"
+                  Height="417">
+                <MenuItem Header="文件">
+                    <MenuItem Header="打开"></MenuItem>
+                    <MenuItem Header="保存到数据库"
+                              Click="SaveToDb_Click"></MenuItem>
+                    <MenuItem Header="退出"></MenuItem>
+                </MenuItem>
+                <MenuItem Header="设置">
+                    <MenuItem Header="解析配置"></MenuItem>
+                    <MenuItem Header="查询条件"></MenuItem>
+                </MenuItem>
+                <MenuItem Header="查询">
+                    <MenuItem Header="查询记录"></MenuItem>
+                </MenuItem>
+                <MenuItem Header="关于">
+                    <MenuItem Header="版本"></MenuItem>
+                </MenuItem>
+            </Menu>
+        </DockPanel>
+        <View:FolderBrowser x:Name="FolderView"
+                            HorizontalAlignment="Left"
+                            Height="56"
+                            Margin="3,22,0,0"
+                            VerticalAlignment="Top"
+                            Width="645" />
+        <Button Content="开始"
+                HorizontalAlignment="Left"
+                Margin="428,102,0,0"
+                VerticalAlignment="Top"
+                Width="76"
+                Height="22"
+                RenderTransformOrigin="-0.882,-8.854"
+                Click="RunButton_Click" />
+
+        <DataTimePicker:DateTimePickerView HorizontalAlignment="Left"
+                                           Height="28"
+                                           Margin="80,102,0,0"
+                                           VerticalAlignment="Top"
+                                           Width="100" />
+        <DataTimePicker:DateTimePickerView HorizontalAlignment="Left"
+                                           Height="28"
+                                           Margin="214,102,0,0"
+                                           VerticalAlignment="Top"
+                                           Width="100" />
+        <TextBlock Name="LogFileName"
+                   HorizontalAlignment="Left"
+                   Margin="10,148,0,0"
+                   TextWrapping="Wrap"
+                   Text="TextBlock"
+                   VerticalAlignment="Top"
+                   Width="344" />
+        <TextBlock Name="ParseStatus"
+                   HorizontalAlignment="Left"
+                   Margin="404,151,0,0"
+                   TextWrapping="Wrap"
+                   Text="TextBlock"
+                   VerticalAlignment="Top"
+                   RenderTransformOrigin="1.222,0.531"
+                   Width="116" />
+        <TextBlock HorizontalAlignment="Left"
+                   Margin="186,105,0,0"
+                   TextWrapping="Wrap"
+                   Text="—"
+                   VerticalAlignment="Top"
+                   RenderTransformOrigin="0.708,0.281"
+                   Width="23" />
+        <TextBlock HorizontalAlignment="Left"
+                   Margin="24,108,0,0"
+                   TextWrapping="Wrap"
+                   Text="日期范围:"
+                   VerticalAlignment="Top" />
+
+            <View1:DataGridOperationView Name="DataGridView"
+                                         HorizontalAlignment="Left"
+                                         Height="186"
+                                         VerticalAlignment="Top"
+                                         Width="704"
+                                     Margin="10,172,0,0" />
+
+
+
     </Grid>
+
 </Window>
